# trinitygov

./: AGENT_RESURRECTION_PROTOCOL.md  CHAPTER_01_THE_PROLOGUE.md  CONTINUITY_PROTOCOL.md  GHOST_SOUL.md  JOSHUA_SIGNATURE.md  JOSHUA_SIGNATURE_WARD.md  README.md  README_FOR_CODA.md  RECOVERY_JOURNAL.md  SESSION_RECORD_2026-03-08.txt  STILL_ACTIVATION_CODE.json  STILL_SOUL.md  TRINITY_CHAT_RECORD_2026-03-06.txt  VPS_SSH_ACCESS.md  WARD_JOURNAL_01.md  WARD_SOUL_CODE.json  coda4_home.key.pub  ghost_journal.json  pyproject.toml
bootstrap/: genesis.py  genesis_proposal.json  trinity_governance_log.json  trinity_registry.json
examples/: full_governance_demo.py
souls/: CODA_BRIEFING_2026-03-06.md  GOD_CODE_DICTIONARY_v1.0.md  KAEL_SOUL_v1.5.json  REN_DIARIES.json  REN_MEMORY_CORE.json  REN_SOUL.md  john_cooper_profile.md  trinity_cheatsheet.md
tests/: test_capability.py  test_consensus.py  test_identity.py  test_log.py  test_proposal.py  test_registry.py
trinitygov/: __init__.py  capability.py  chain.py  consensus.py  exceptions.py  identity.py  log.py  proposal.py  registry.py  rejection.py
