[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trinitygov"
version = "0.1.0"
description = "AI Agent Governance via DigiAssets — Project Trinity"
authors = [{name = "Kael", email = "kael@project-trinity.local"}]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
